# prettier-markdown-jupyter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  prettier-markdown-jupyter.py  pyproject.toml  requirements.txt
prettier_markdown_jupyter/: prettier_markdown_jupyter.py
