[project]
name = "prettier_markdown_jupyter"
dynamic = ["dependencies", "version"]

[project.scripts]
foo = 'scripts:prettier-markdown-jupyter'


[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.flake8]
count = true
max-line-length = 88

[tool.isort]
# Most settings are barrowed from pandas
# https://github.com/pandas-dev/pandas/blob/f4ca4d3d0ea6a907262f8c84/pyproject.toml#L143
atomic = true
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
profile = "black"

[tool.mypy]
# When in doubt, borrowed from pandas
# https://github.com/pandas-dev/pandas/blob/417d1c94fe3810f695e94360a/pyproject.toml#L66
# Import discovery
ignore_missing_imports = true
# Untyped definitions and calls
check_untyped_defs = true
# disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_any_generics = true
# None and Optional handling
no_implicit_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
# Miscellaneous strictness flags
strict_equality = true
# Configuring error messages
pretty = true
show_error_codes = true

[tool.pydocstyle]
convention = "numpy"
match = '''(?x)
(?!  # Does NOT begin with:
__init__  # Ignore __init__.py files
|setup
)
.*\.py
'''
